tests/snapshots/edicion_conflicto_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ [tmp]/hogar ───────────────────────────────────────────────────────────────────────────┐┌ /var/www/cooperapp ──────────────────────────────────────────────────────────────────────────────┐
│   ..                                                                                             ││   ..                                                                                             │
│   proyectos         — 2025   ✕                                                                   ││   static              — 2025   ✕                                                                 │
│   notas.md        8 B 2025   ✕                                                                   ││   actual.py@        9 B 2025   ✕                                                                 │
│                                                                                                  ││   compartido@       8 B 2025   ✕                                                                 │
│                                                                                                  ││▸  main.py          14 B 2025   ✕                                                                 │
│                                                                                                  ││   nginx.conf       2 kB 2025   ✕                                                                 │
│                                                                                                  ││   servidor.key     2 kB 2025   ✕                                                                 │
│                                                                                                  ││   volcado.sql   12.0 MB 2025   ✕                                                                 │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                   ┌ EL FICHERO CAMBIÓ EN EL HOST ────────────────────────────────┐                                                                   │
│                                                                   │                                                              │                                                                   │
│                                                                   │  hetzner-01:/var/www/cooperapp/main.py                       │                                                                   │
│                                                                   │    al abrirlo   14 bytes   12 sep 2025 09:41:07              │                                                                   │
│                                                                   │    ahora        16 bytes   13 sep 2025 09:41:07              │                                                                   │
│                                                                   │                                                              │                                                                   │
│                                                                   │  Nada se sobrescribe si no eliges «s».                       │                                                                   │
│                                                                   │                                                              │                                                                   │
│                                                                   │  s sobrescribir   c guardar mi versión como copia local      │                                                                   │
│                                                                   │  d descartar mis cambios   esc volver                        │                                                                   │
│                                                                   │                                                              │                                                                   │
│                                                                   └──────────────────────────────────────────────────────────────┘                                                                   │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└ 3 elementos · 8 B ───────────────────────────────────────────────────────────────────────────────┘└ 8 elementos · 12.0 MB ───────────────────────────────────────────────────────────────────────────┘
 ✕ hetzner-01:/var/www/cooperapp/main.py cambió en el host mientras lo editabas
