tests/snapshots/edicion_subir_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ [tmp]/hogar ───────────────────────────────────────────────────────────────────────────┐┌ /var/www/cooperapp ──────────────────────────────────────────────────────────────────────────────┐
│   ..                                                                                             ││   ..                                                                                             │
│   proyectos         — 2025   ✕                                                                   ││   static              — 2025   ✕                                                                 │
│   notas.md        8 B 2025   ✕                                                                   ││   actual.py@        9 B 2025   ✕                                                                 │
│                                                                                                  ││   compartido@       8 B 2025   ✕                                                                 │
│                                                                                                  ││▸  main.py          14 B 2025   ✕                                                                 │
│                                                                                                  ││   nginx.conf       2 kB 2025   ✕                                                                 │
│                                                                                                  ││   servidor.key     2 kB 2025   ✕                                                                 │
│                                                                                                  ││   volcado.sql   12.0 MB 2025   ✕                                                                 │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                    ┌ SUBIR CAMBIOS ─────────────────────────────────────────────┐                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    │  ¿Subir cambios a                                          │                                                                    │
│                                                                    │  hetzner-01:/var/www/cooperapp/main.py?                    │                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    │  Antes se comprueba que no haya cambiado en el host.       │                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    │  s subir   n no subir                                      │                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    └────────────────────────────────────────────────────────────┘                                                                    │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└ 3 elementos · 8 B ───────────────────────────────────────────────────────────────────────────────┘└ 8 elementos · 12.0 MB ───────────────────────────────────────────────────────────────────────────┘
 bajando hetzner-01:/var/www/cooperapp/main.py para editarlo…
